--- a/notebooks/prototype.ipynb
+++ b/notebooks/prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,9 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nNote: To compute voxel_size, multiply base size (specified in SECOND config) by downsampling ratio.\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Note: To compute voxel_size, multiply base size (specified in SECOND config) by downsampling ratio.\n",
@@ -29,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,15 +59,26 @@
     "    \"\"\"\n",
     "    Represents G in equation 2.\n",
     "    \"\"\"\n",
-    "    \n",
-    "    def __init__(self, channels: List):\n",
+    "\n",
+    "    def __init__(self, C_in: int, channels: List):\n",
     "        \"\"\"\n",
+    "        C_in: incoming channels.\n",
     "        channels: length-3 list of channels in each layer.\n",
     "        \"\"\"\n",
-    "        self.linear = lambda x: x\n",
+    "        super(self, VSA_MLP).__init__()\n",
+    "        self.layers = nn.Sequential(\n",
+    "            nn.Linear(C_in, channels[0], bias=True),\n",
+    "            nn.BatchNorm1d(channels[0]),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Linear(channels[0], channels[1], bias=True),\n",
+    "            nn.BatchNorm1d(channels[1]),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Linear(channels[1], channels[2], bias=True),\n",
+    "        )\n",
     "\n",
     "    def forward(self, voxel_set: torch.Tensor):\n",
-    "        x = self.linear(voxel_set).max(2)\n",
+    "        x = self.layers(voxel_set)\n",
+    "        x = x.max(2)\n",
     "        return x\n",
     "\n",
     "\n",
@@ -74,7 +96,7 @@
     "        voxel_size: length-3 tensor describing size of atomic voxel, accounting for stride.\n",
     "        volume_offset: length-3 tensor describing coordinate offset of voxel grid.\n",
     "        \"\"\"\n",
-    "        # TODO: call super\n",
+    "        super(self, VoxelSetAbstraction).__init__()\n",
     "        self.radius = radius\n",
     "        self.nsample = nsample\n",
     "        self.voxel_size = voxel_size\n",
@@ -86,10 +108,9 @@
     "        return: shape (B, Tk, 3) array of locations in raw coordinates.\n",
     "        \"\"\"\n",
     "        location = (voxel_index * self.voxel_size) + self.volume_offset\n",
-    "        location = location / self.voxel_size\n",
     "        return location\n",
     "\n",
-    "    def get_neighbors(self, keypoint_location: torch.Tensor, voxel_feature: torch.Tensor, voxel_location: torch.Tensor)\n",
+    "    def get_neighbors(self, keypoint_location: torch.Tensor, voxel_feature: torch.Tensor, voxel_location: torch.Tensor):\n",
     "        neighbor_index = ball_query(self.radius, self.nsample, voxel_location, keypoint_location)\n",
     "        neighbor_feature = gather_operation(voxel_feature, neighbor_index)\n",
     "        neighbor_location = gather_operation(voxel_location, neighbor_index)\n",
@@ -117,6 +138,7 @@
     "        \"\"\"\n",
     "        num_keypoint: number of keypoints\n",
     "        \"\"\"\n",
+    "        super(self, PV_RCNN).__init__()\n",
     "        self.num_keypoint = num_keypoint\n",
     "        pass\n",
     "    \n",
