add example sparse 3d cnn

--- a/notebooks/prototype.ipynb
+++ b/notebooks/prototype.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
+    "import numpy as np\n",
     "from torch import nn\n",
-    "\n",
     "from typing import List\n",
+    "import sys\n",
     "\n",
-    "if False:\n",
-    "    from pointnet2.pointnet2_utils import (\n",
-    "        ball_query, gather_operation, furthest_point_sample)"
+    "import spconv\n",
+    "from pointnet2.pointnet2_utils import ball_query, gather_operation, furthest_point_sample"
    ]
   },
   {
@@ -40,18 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class cfg:\n",
+    "class PvrcnnConfig:\n",
     "    n_keypoints = 2048\n",
     "    strides = [1, 2, 4, 8]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
     "        C_in: incoming channels.\n",
     "        channels: length-3 list of channels in each layer.\n",
     "        \"\"\"\n",
-    "        super(self, VSA_MLP).__init__()\n",
+    "        super(VSA_MLP, self).__init__()\n",
     "        self.layers = nn.Sequential(\n",
     "            nn.Linear(C_in, channels[0], bias=True),\n",
     "            nn.BatchNorm1d(channels[0]),\n",
@@ -96,7 +96,7 @@
     "        voxel_size: length-3 tensor describing size of atomic voxel, accounting for stride.\n",
     "        volume_offset: length-3 tensor describing coordinate offset of voxel grid.\n",
     "        \"\"\"\n",
-    "        super(self, VoxelSetAbstraction).__init__()\n",
+    "        super(VoxelSetAbstraction, self).__init__()\n",
     "        self.radius = radius\n",
     "        self.nsample = nsample\n",
     "        self.voxel_size = voxel_size\n",
@@ -138,7 +138,7 @@
     "        \"\"\"\n",
     "        num_keypoint: number of keypoints\n",
     "        \"\"\"\n",
-    "        super(self, PV_RCNN).__init__()\n",
+    "        super(PV_RCNN, self).__init__()\n",
     "        self.num_keypoint = num_keypoint\n",
     "        pass\n",
     "    \n",
@@ -149,20 +149,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "B, C = 2, 18000\n",
-    "x = torch.randn((B, C, 4), dtype=torch.float32)"
+    "class CNN_3D(nn.Module):\n",
+    "    \"\"\"\n",
+    "    Placeholder sparse 3D CNN with three blocks:\n",
+    "    block_0: [1600, 1200, 41] -> [800, 600, 21]\n",
+    "    block_1: [800, 600, 21]   -> [400, 300, 11]\n",
+    "    block_2: [400, 300, 11]   -> [200, 150, 5]\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self, C_in, shape, return_dense=False):\n",
+    "        super(CNN_3D, self).__init__()\n",
+    "        self.blocks = spconv.SparseSequential(\n",
+    "            spconv.SparseConv3d(C_in, 16, 3, 2, padding=1, bias=False),\n",
+    "            spconv.SparseConv3d(16, 32, 3, 2, padding=1, bias=False),\n",
+    "            spconv.SparseConv3d(32, 64, 3, 2, padding=1, bias=False),\n",
+    "        )\n",
+    "        self.shape = shape\n",
+    "        self.return_dense = return_dense\n",
+    "\n",
+    "    def forward(self, features, coordinates, batch_size):\n",
+    "        coordinates = coors.int()\n",
+    "        x0 = spconv.SparseConvTensor(features, coordinates, self.shape, batch_size)\n",
+    "        x1 = self.blocks[0](x0)\n",
+    "        x2 = self.blocks[1](x1)\n",
+    "        x3 = self.blocks[2](x2)\n",
+    "        x = [x0, x1, x2, x3]\n",
+    "        x = [xi.dense() for xi in x] if self.return_dense else x\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg = PvrcnnConfig()\n",
+    "\n",
+    "voxel_size = np.r_[0.05, 0.05, 0.1]\n",
+    "grid_bounds = np.r_[0, -40, -3, 70.4, 40, 1]\n",
+    "\n",
+    "voxel_generator = spconv.utils.VoxelGenerator(\n",
+    "    voxel_size=voxel_size, point_cloud_range=grid_bounds,\n",
+    "    max_num_points=5, max_voxels=40000,\n",
+    ")\n",
+    "\n",
+    "points = np.fromfile('./sample.bin', dtype=np.float32).reshape(-1, 4)\n",
+    "voxels, coords, voxel_population = voxel_generator.generate(points)\n",
+    "\n",
+    "from_numpy = lambda x: torch.from_numpy(x).unsqueeze(0).cuda()\n",
+    "points, voxels, coords, voxel_population = map(\n",
+    "    from_numpy, (points, voxels, coords, voxel_population))\n",
+    "#indices_keypoint = furthest_point_sample(points, cfg.n_keypoints)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_3d = CNN_3D(C_in=4, shape=[1600, 1200, 41])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_shape = (grid_bounds[3:] - grid_bounds[:3]) / voxel_size\n",
+    "grid_shape = (grid_shape[::-1] + [1, 0, 0]).astype(np.int32) # [1408, 1600, 40] -> [41, 1600, 1408]\n",
+    "x_sparse = spconv.SparseConvTensor(voxels, coords, grid_shape, batch_size=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  41, 1600, 1408], dtype=int32)"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_sparse.spatial_shape\n",
+    "\n",
+    "#ret = ret.dense()\n",
+    "#N, C, D, H, W = ret.shape\n",
+    "#ret = ret.view(N, C * D, H, W)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "workspace",
+   "display_name": "tmp",
    "language": "python",
-   "name": "workspace"
+   "name": "tmp"
   },
   "language_info": {
    "codemirror_mode": {
@@ -174,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
