figx shape bug and update installation instructions

--- a/notebooks/prototype.ipynb
+++ b/notebooks/prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "from torch import nn\n",
     "from typing import List\n",
     "import sys\n",
+    "sys.path.append('/home/jhultman/Projects/tmp/PV-RCNN/Pointnet2.PyTorch/')\n",
     "\n",
     "import spconv\n",
     "from pointnet2.pointnet2_utils import ball_query, gather_operation, furthest_point_sample"
@@ -20,38 +21,21 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nNote: To compute voxel_size, multiply base size (specified in SECOND config) by downsampling ratio.\\n'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "Note: To compute voxel_size, multiply base size (specified in SECOND config) by downsampling ratio.\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
    "outputs": [],
    "source": [
     "class PvrcnnConfig:\n",
+    "    C_in = 4\n",
     "    n_keypoints = 2048\n",
-    "    strides = [1, 2, 4, 8]"
+    "    strides = [1, 2, 4, 8]\n",
+    "    max_num_points = 5\n",
+    "    max_voxels = 40000\n",
+    "    voxel_size = [0.05, 0.05, 0.1]\n",
+    "    grid_bounds = [0, -40, -3, 64, 40, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,19 +133,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class CNN_3D(nn.Module):\n",
     "    \"\"\"\n",
     "    Placeholder sparse 3D CNN with three blocks:\n",
-    "    block_0: [1600, 1200, 41] -> [800, 600, 21]\n",
-    "    block_1: [800, 600, 21]   -> [400, 300, 11]\n",
-    "    block_2: [400, 300, 11]   -> [200, 150, 5]\n",
+    "        block_0: [1600, 1280, 41] -> [800, 640, 21]\n",
+    "        block_1: [800, 640, 21]   -> [400, 320, 11]\n",
+    "        block_2: [400, 320, 11]   -> [200, 160, 6]\n",
     "    \"\"\"\n",
     "    \n",
-    "    def __init__(self, C_in, shape, return_dense=False):\n",
+    "    def __init__(self, C_in, shape):\n",
     "        super(CNN_3D, self).__init__()\n",
     "        self.blocks = spconv.SparseSequential(\n",
     "            spconv.SparseConv3d(C_in, 16, 3, 2, padding=1, bias=False),\n",
@@ -169,86 +153,54 @@
     "            spconv.SparseConv3d(32, 64, 3, 2, padding=1, bias=False),\n",
     "        )\n",
     "        self.shape = shape\n",
-    "        self.return_dense = return_dense\n",
     "\n",
     "    def forward(self, features, coordinates, batch_size):\n",
-    "        coordinates = coors.int()\n",
-    "        x0 = spconv.SparseConvTensor(features, coordinates, self.shape, batch_size)\n",
+    "        x0 = spconv.SparseConvTensor(\n",
+    "            features, coordinates.int(), self.shape, batch_size,\n",
+    "        )\n",
     "        x1 = self.blocks[0](x0)\n",
     "        x2 = self.blocks[1](x1)\n",
     "        x3 = self.blocks[2](x2)\n",
     "        x = [x0, x1, x2, x3]\n",
-    "        x = [xi.dense() for xi in x] if self.return_dense else x\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "cfg = PvrcnnConfig()\n",
     "\n",
-    "voxel_size = np.r_[0.05, 0.05, 0.1]\n",
-    "grid_bounds = np.r_[0, -40, -3, 70.4, 40, 1]\n",
-    "\n",
     "voxel_generator = spconv.utils.VoxelGenerator(\n",
-    "    voxel_size=voxel_size, point_cloud_range=grid_bounds,\n",
-    "    max_num_points=5, max_voxels=40000,\n",
+    "    voxel_size=cfg.voxel_size, \n",
+    "    point_cloud_range=cfg.grid_bounds,\n",
+    "    max_voxels=cfg.max_voxels,\n",
+    "    max_num_points=cfg.max_num_points,\n",
     ")\n",
     "\n",
-    "points = np.fromfile('./sample.bin', dtype=np.float32).reshape(-1, 4)\n",
-    "voxels, coords, voxel_population = voxel_generator.generate(points)\n",
+    "points = np.fromfile('./sample.bin', dtype=np.float32).reshape(-1, cfg.C_in)\n",
+    "features, coordinates, voxel_population = voxel_generator.generate(points)\n",
+    "coordinates = np.pad(coordinates, ((0, 0), (1, 0)), mode=\"constant\", constant_values=0)\n",
     "\n",
-    "from_numpy = lambda x: torch.from_numpy(x).unsqueeze(0).cuda()\n",
-    "points, voxels, coords, voxel_population = map(\n",
-    "    from_numpy, (points, voxels, coords, voxel_population))\n",
-    "#indices_keypoint = furthest_point_sample(points, cfg.n_keypoints)"
+    "from_numpy = lambda x: torch.from_numpy(x).cuda()\n",
+    "points, features, coordinates, voxel_population = map(\n",
+    "    from_numpy, (points, features, coordinates, voxel_population))\n",
+    "features = features.view(-1, cfg.C_in)\n",
+    "\n",
+    "shape = np.r_[voxel_generator.grid_size[::-1]] + [1, 0, 0] # [1280, 1600, 40] -> [41, 1600, 1280]\n",
+    "cnn_3d = CNN_3D(C_in=cfg.C_in, shape=shape).cuda()\n",
+    "out = cnn_3d(features.view(-1, 4), coordinates, batch_size=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cnn_3d = CNN_3D(C_in=4, shape=[1600, 1200, 41])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid_shape = (grid_bounds[3:] - grid_bounds[:3]) / voxel_size\n",
-    "grid_shape = (grid_shape[::-1] + [1, 0, 0]).astype(np.int32) # [1408, 1600, 40] -> [41, 1600, 1408]\n",
-    "x_sparse = spconv.SparseConvTensor(voxels, coords, grid_shape, batch_size=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  41, 1600, 1408], dtype=int32)"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_sparse.spatial_shape\n",
-    "\n",
-    "#ret = ret.dense()\n",
-    "#N, C, D, H, W = ret.shape\n",
-    "#ret = ret.view(N, C * D, H, W)"
+    "indices_keypoint = furthest_point_sample(points, cfg.n_keypoints)"
    ]
   }
  ],
